--- a/event-sorter/package.json
+++ b/event-sorter/package.json
@@ -19,7 +19,8 @@
     "pg": "^8.18.0",
     "prisma": "^5.22.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "resend": "^6.9.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
